# vxray

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md
src/: compiled_metal_shaders.c  compiled_metal_shaders.h  compiled_spirv_shaders.c  compiled_spirv_shaders.h  constants.h  cvox.cc  cvox.h  dda.h  dda.ps.hlsl  dda.vs.hlsl  fullscreen.ps.hlsl  hlsl_shim.h  shader_compiler.c  vxray.c
todo/: fix-windows-hlsl-compile.md
